--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+libqdrive (0.9.1-1) stable; urgency=low
+  * Partitions can be force-unmounted
+
+ -- Andreas Misje <amisje@gmail.com>  Thu, 05 Jun 2014 08:13:31 +0200
+
 libqdrive (0.9.0-1) stable; urgency=low
   * Initial release
 
