--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libqdrive (0.9.2-1) unstable; urgency=low
+  * Improve deb scripts
+  * Only build shared library in deb package
+  * Only expose version as a header file with defines
+
+ -- Andreas Misje <amisje@gmail.com>  Sun, 21 Oct 2018 10:52:51 +0200
+
 libqdrive (0.9.1-1) stable; urgency=low
   * Partitions can be force-unmounted
 
