--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ libqdrive (0.9.2-1) unstable; urgency=low
   * Improve deb scripts
   * Only build shared library in deb package
   * Only expose version as a header file with defines
+  * Compile with more warnings and remove extra semicolons from header files
 
  -- Andreas Misje <amisje@gmail.com>  Sun, 21 Oct 2018 10:52:51 +0200
 
